--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
-- bug: nestahuju sa clenstva v `Výbor NR SR pre európske záležitosti` a v `Klub SaS`
-- zmenit v test.py ukazkoveho poslanca z Jozsefa Nagya na ineho, ktory ma clenstva
 - scrape NRSR and check VPAPI README.rst API links
+- preskumat velkost db, konkretnych kolekcii, indexov... (pre cz/psp vraj vychadza cca. 2GB na jedno volebne obdobie)
+	http://jasonwilder.com/blog/2012/02/08/optimizing-mongodb-indexes/
+- API: moznost poslat do API vlastne `id`
 - check Scrapy and Pupa
 - create Session class?
 - scraping of Speeches, ...
